actualicacion de ficheros js

--- a/2DAW/FRONT-END/JAVASCRIPT/javascript/22-Cookies/index.html
+++ b/2DAW/FRONT-END/JAVASCRIPT/javascript/22-Cookies/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
 
-   
+   <button id="crear">Crear</button>
+   <button id="mostrar">Mostrar</button>
+   <button id="modificar">Modificar</button>
+   <button id="eliminar">Eliminar</button>
 
 
     <script src="js/01-app.js"></script> 
