--- a/2DAW/FRONT-END/JAVASCRIPT/javascript/24-callback/index.html
+++ b/2DAW/FRONT-END/JAVASCRIPT/javascript/24-callback/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/styles.css">
+   
 
 </head>
 <body>
 
-   
-    <script src="js/03-app.js"></script> 
-   
+
+    <p id="demo"></p>
+    <p id="demo2"></p>
+    <script src="js/01-app.js"></script> 
    
     
 </body>
