--- a/2DAW/FRONT-END/JAVASCRIPT/javascript/28-axios/index.html
+++ b/2DAW/FRONT-END/JAVASCRIPT/javascript/28-axios/index.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/styles.css">
+   
 
 </head>
 <body>
 
-   
-    <script src="js/03-app.js"></script> 
-   
+
+    <div id="contenido"></div>
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="js/01-app.js"></script> 
    
     
 </body>
