--- a/2DAW/FRONT-END/JAVASCRIPT/javascript/30-interseccionObserver/index.html
+++ b/2DAW/FRONT-END/JAVASCRIPT/javascript/30-interseccionObserver/index.html
@@ -3,16 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
-    <link rel="stylesheet" href="css/styles.css">
-
 </head>
 <body>
-
-   
-    <script src="js/03-app.js"></script> 
-   
-   
     
+    <div id="contenido"></div>
+    
+   
+    <script src="js/01-app.js"></script>
 </body>
 </html>
