--- a/FRONT-END/JAVASCRIPT/javascript/29-graficos_animacion/index.html
+++ b/FRONT-END/JAVASCRIPT/javascript/29-graficos_animacion/index.html
@@ -4,34 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href=""
    
 
 </head>
 <body>
 
-
-    <div class="contenido">
-        <div id="contenido"></div>
-        <button type="button" id="cargarTXT">
-            obtener desde TXT
-        </button>
-        <button type="button" id="cargarJSON">
-            obtener desde JSON
-        </button>
-        <button type="button" id="cargarJSONArray">
-            obtener desde JSON - ARRAY
-        </button>
-        <button type="button" id="cargarAPI">
-            CARGAR API
-        </button>
-        <button type="button" id="cargarPOST">
-            CARGAR POST
-        </button>
-        <button type="button" id="cargarGET">
-            CARGAR GET
-        </button>
-    </div>
-    <script src="js/07-app.js"></script> 
+    <canvas id="miCanvas" width="500" height="500" class="canvas"></canvas>
+    <script src="js/01-app.js"></script> 
    
     
 </body>
