metido la carpta de javascript actualizada

--- a/FRONT-END/JAVASCRIPT/javascript/29-graficos_animacion/index.html
+++ b/FRONT-END/JAVASCRIPT/javascript/29-graficos_animacion/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
-    <link rel="stylesheet" href=""
    
 
 </head>
 <body>
 
-    <canvas id="miCanvas" width="500" height="500" class="canvas"></canvas>
-    <script src="js/01-app.js"></script> 
-   
+    <canvas id="miCanvas" width="800" height="800" class="canvas"></canvas>
+
+    <script src="js/14-app.js"></script>
     
 </body>
 </html>
