--- a/LENGUAJE DE MARCAS/tareas/TEMA2/A05-04 - Formularios 4 - Validaciones HTML/formularios4.html
+++ b/LENGUAJE DE MARCAS/tareas/TEMA2/A05-04 - Formularios 4 - Validaciones HTML/formularios4.html
@@ -7,7 +7,13 @@
 </head>
 <body>
     <h1>Formulario de registro de usuario</h1>
-    <form name="FormularioRegistro" action="registro.php" method="post" autocomplete="off" enctype="application/x-www-form-urlencoded" enctype="multipart/form-data">
+    <form name="FormularioRegistro" 
+    action="registro.php" 
+    method="post" 
+    autocomplete="off"  
+    enctype="multipart/form-data"
+    target="_self"
+    accept-charset="UTF-8">
         <fieldset>
             <legend>Registro de Usuario</legend>
             <fieldset>
